Fri Nov  6 17:13:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_header): split the line by tabs.

Fri Nov  6 11:01:34 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (call_trace_func): remove the trace hook if any exception
	  raised.  [ruby-list:46515]

Fri Nov  6 10:56:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (get_event_name): added thread events.

Sun Feb 15 03:50:21 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* hash.c (rb_hash): always return a fixnum value because a return
	  value of rb_hash may be used as a hash value itself and bignums have
	  no unique VALUE.

	* test/ruby/test_hash.rb: add a test for above.

Thu Nov  5 12:06:35 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (args): use splat_array.
	  fix: when *foo doesn't splat. [ruby-list:46517]

Thu Nov  5 11:31:23 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (CreateChild): allocate temporary buffer and use it
	  instead of directly modify the passed string.  [ruby-dev:39635]

Sat Oct 31 17:20:58 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/net/http.rb (Net::HTTPResponse#each_response_header):
	  cosmetic: '?\ ' -> '?\s'

Fri Oct 30 22:02:15 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/net/http.rb (Net::HTTPResponse#each_response_header):
	  accept multiline message header of HTTP response.  see #1796.
	  cf. RFC 2616 '4.2 Message Header'.

	* test/net/http/test_httpresponse.rb: added.

Tue Oct 27 22:05:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_inspect): get rid of adding garbage to shor
	  UTF-8 string.  [ruby-dev:39550]

Tue Oct 27 21:20:35 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/variable.rb: add TkVariable#+@ and -@ method.

Tue Oct 27 08:56:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb: reverted r25443 because build_os is used in mkmf.rb
	  on some platforms.  [ruby-core:26332]
