@@ -1,3 +1,9 @@
+Mon Nov  9 01:55:10 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* eval.c (method_inspect, method_name, mnew): Bug fix when
+	  method created from an alias.
+	  Based on a patch by Peter Vanbroekhoven [ruby-core:22040]
+
 Fri Nov  6 17:13:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/mkmf.rb (create_header): split the line by tabs.
